--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "node": ">=8"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.1.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
@@ -13,25 +12,23 @@
     "cssnano": "^3.10.0",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
-    "gulp-cache": "^0.4.2",
-    "gulp-eslint": "^3.0.0",
+    "gulp-cache": "^1.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-eslint": "^5.0.0",
     "gulp-filter": "^4.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^3.0.1",
-    "gulp-load-plugins": "^1.2.4",
-    "gulp-plumber": "^1.0.1",
-    "gulp-postcss": "^7.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-postcss": "^7.0.1",
     "gulp-pug": "^4.0.1",
-    "gulp-sass": "^3.0.0",
+    "gulp-sass": "^4.0.1",
     "gulp-size": "^2.1.0",
-    "gulp-sourcemaps": "^2.2.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^2.0.0",
-    "gulp-useref": "^3.0.0",
-    "main-bower-files": "^2.5.0",
+    "gulp-useref": "^3.1.5",
     "pug": "^2.0.3",
-    "run-sequence": "^1.2.2",
-    "wiredep": "^4.0.0"
+    "run-sequence": "^1.2.2"
   },
   "eslintConfig": {
     "env": {
@@ -45,5 +42,12 @@
         "single"
       ]
     }
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.1.0",
+    "bootstrap": "^4.1.2",
+    "jquery": "^3.3.1",
+    "owl.carousel": "^2.3.4",
+    "popper.js": "^1.14.3"
   }
 }
