--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "node": ">=8"
   },
   "devDependencies": {
+    "ansi-colors": "^2.0.5",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
@@ -11,6 +12,7 @@
     "browser-sync": "^2.2.1",
     "cssnano": "^3.10.0",
     "del": "^2.2.0",
+    "fancy-log": "^1.3.2",
     "gulp": "^3.9.0",
     "gulp-cache": "^1.0.2",
     "gulp-concat": "^2.6.1",
@@ -23,12 +25,13 @@
     "gulp-postcss": "^7.0.1",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.1",
-    "gulp-size": "^2.1.0",
+    "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.5",
     "pug": "^2.0.3",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "svgo": "^1.0.5"
   },
   "eslintConfig": {
     "env": {
