--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "ansi-colors": "^2.0.5",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.4.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.5.2",
+    "babel-register": "^6.26.0",
     "browser-sync": "^2.2.1",
     "cssnano": "^3.10.0",
     "del": "^2.2.0",
     "fancy-log": "^1.3.2",
-    "gulp": "^3.9.0",
+    "gulp": "^4.0.0",
     "gulp-cache": "^1.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^5.0.0",
@@ -21,6 +22,7 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
     "gulp-pug": "^4.0.1",
