--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.5",
+    "hamburgers": "^0.9.3",
     "pug": "^2.0.3",
     "run-sequence": "^1.2.2",
     "svgo": "^1.0.5"
@@ -52,6 +53,7 @@
     "@fortawesome/fontawesome-free": "^5.1.0",
     "bootstrap": "^4.1.2",
     "jquery": "^3.3.1",
+    "jquery.mmenu": "^7.0.6",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.14.3"
   }
