--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fancy-log": "^1.3.2",
     "gulp": "^4.0.0",
     "gulp-cache": "^1.0.2",
+    "gulp-cheerio": "^0.6.3",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^5.0.0",
     "gulp-filter": "^4.0.0",
@@ -26,15 +27,17 @@
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
     "gulp-pug": "^4.0.1",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-svg-sprite": "^1.4.0",
+    "gulp-svgmin": "^1.2.4",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.5",
     "hamburgers": "^0.9.3",
     "pug": "^2.0.3",
-    "run-sequence": "^1.2.2",
-    "svgo": "^1.0.5"
+    "run-sequence": "^1.2.2"
   },
   "eslintConfig": {
     "env": {
