--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp-svg-sprite": "^1.3.7",
     "gulp-svgmin": "^1.2.4",
     "gulp-tinypng": "^1.0.2",
-    "gulp-uglifyjs": "^0.6.2"
+    "gulp-uglifyjs": "^0.6.2",
+    "jquery.documentsize": "^1.2.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.1.0",
